cabal-version: 1.18
name: wallet-api-gen
version: 0.1.0.0
license: BSD3
license-file: LICENSE
copyright: Copyright: (c) 2018 Input Output
maintainer: jann.mueller@iohk.io
author: Jann Mueller
synopsis: Hedgehog generators for wallet-api
description:
    Hedgehog generators for wallet-api types
category: Language
build-type: Simple
extra-doc-files: README.md

source-repository head
    type: git
    location: https://github.com/input-output-hk/plutus-prototype

library
    exposed-modules:
        Wallet.Generators
    other-modules:
    hs-source-dirs: src
    default-language: Haskell2010
    default-extensions: ExplicitForAll ScopedTypeVariables
                        DeriveGeneric StandaloneDeriving DeriveLift
                        GeneralizedNewtypeDeriving DeriveFunctor DeriveFoldable
                        DeriveTraversable
    other-extensions: DeriveAnyClass FlexibleContexts FlexibleInstances
                      MultiParamTypeClasses TypeFamilies OverloadedStrings
                      MonadComprehensions ConstrainedClassMethods TupleSections GADTs
                      RankNTypes TemplateHaskell QuasiQuotes TypeApplications
                      ExistentialQuantification
    ghc-options: -Wall -Wnoncanonical-monad-instances
                 -Wincomplete-uni-patterns -Wincomplete-record-updates
                 -Wredundant-constraints -Widentities
    build-depends:
        base >=4.9 && <5,
        containers -any,
        hedgehog -any,
        tasty -any,
        tasty-hedgehog -any,
        text -any,
        wallet-api -any

test-suite wallet-api-test
    default-language: Haskell2010
    hs-source-dirs: test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base >=4.9 && <5,
        containers -any,
        hedgehog -any,
        tasty -any,
        tasty-hedgehog -any,
        text -any,
        wallet-api -any,
        wallet-api-gen -any